# nwb_data_viewer

./: README.md  environment.yml  pyproject.toml
notebooks/: dandi_example.ipynb  eseries_example.ipynb  integrated_example.ipynb  pose_example.ipynb
src/nwb_data_viewer/: spatial_series.py  time_series.py  video.py
viewer/: spatial_series.py  time_series.py  video.py  viewer_mixin.py
