[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nwb_data_viewer"
description = "visualization of nwb-formatted data using napari"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Samuel Bray", email = "sam.bray@ucsf.edu" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pynwb",
    "napari",
    "pyqt5",
    "dandi",

]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/samuelbray32/nwb_data_viewer"
"Bug Tracker" = "https://github.com/samuelbray32/nwb_data_viewer/issues"

[project.optional-dependencies]
test = ["black", "pytest", "pytest-cov"]

[tool.hatch.version]
source = "vcs"
fallback = "0.0.1"

[tool.hatch.build.hooks.vcs]
version-file = "src/nwb_data_viewer/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/nwb_data_viewer"]
